[package]
name = "planetgen"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.13", features = ["webgl"] }
winit = "0.26" # winit 0.27 doesn't work with wgpu 0.13

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
